css enhancement gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -180,6 +180,7 @@ margin-top: 5px;
 @media only screen and (max-width: 767px) {
     .cards-wrapper{
         justify-content: center;
+        padding: 0px 10px;
     }
     .cards-wrapper .card{
         width: calc(100%);
